# AI_tool

./: LLM 筆記.md  LLM_API.md  LLM_Web  LLM_Web.md  Line_api.md  README.md  figma規格書.md  github_課程.txt  google_agent.txt  graph_agnet.md  llm爬蟲.txt  veo3_shot.md  vibe_coding.md  全端網頁.md  創作生成式AI.txt  專案.txt  對岸有名的llm.md  微軟_AI.md  李宏202509.txt  視覺模型核心功能.md  軟工agent.md  軟體工程.md
Flowise/: google_gemi Chatflow.json
MCP/: Claude CLUDE_desktop_config.json setting.md  YWC科技筆記_文章索引.md  mcp_setring.md
N8n_flow/: .gitattributes  AI agent that can scrape webpages 2.json  Build Your AI Agent.json  Chat with GitHub API Documentation_ RAG-Powered Chatbot with Pinecone & gemini.json  Chat with Postgresql Database.json  ChatGPT_TG_Bot.json  Email Assistant_ Convert Natural Language to SQL Queries with Phi4-mini and PostgreSQL.json  Generate & Test SQL Code with GPT_OpenRouter AI and PostgreSQL Sandbox.json  RAG Chatbot for Company Documents using Google Drive and Gemini.json  RAG Starter Template using Simple Vector Stores, Form trigger and GeminiAI (1).json  RAG Starter Template using Simple Vector Stores, Form trigger and GeminiAI.json  mysql.json  mysqlall.txt  n8n 網站樣版.md  (+3 more)
meetingrecode/: .env  2025年08月01日 10點20分.json  2025年08月01日 10點20分.srt  2025年08月01日 10點20分.tsv  2025年08月01日 10點20分.txt  2025年08月01日 10點20分.vtt  Podcast 流程.txt  Q&A4.ini  Q&A_原始檔.txt  README.md  app.py  idea.txt  main.py  mcp_mysql_gemini.py  mcp_requestv1.py  mcp_requestv2.py  mysql_rag_v2.py  mysql_testok.py  podcast1.py  podcast2.py  pyproject.toml  qa_data.json  requirements.txt  新文字文件.txt  模型核心功能.md
(+94 files in other folders)
