[project]
name = "meetproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "mcp[cli]>=1.12.4",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.0",
]
